# hfish-parser

./: ChangeLog.md  LICENSE  README.md  hfish-parser.cabal
HFish/Lang/: Lang.hs
HFish/Parser/: Attoparsec.hs  Common.hs  Gen.hs  Glob.hs  Parsec.hs  Parser.hs  ReadP.hs  Redirect.hs  Trifecta.hs  Version.hs
HFish/Parser/Earley/: Grammar.hs
HFish/QuickCheck/: Arbitrary.hs  Properties.hs
HFish/UnParser/: Quote.hs  UnParser.hs
